v1.15.19
--------------------------------------------------------------------------------
 * Fixed the Makefile to include the test module in the distribution, so that
   tests can be build an run from the tar file. Fixes #210.

v1.15.18
--------------------------------------------------------------------------------
 * Fixed a race condition that could lead to streams being aborted
   (RST to the client), although a response had been produced.

v1.15.17
--------------------------------------------------------------------------------
 * Integrated changes from Apache trunk.
 * Log requests and sent the configured error response in case of early detected
   errors like too many or too long headers. [Ruediger Pluem]
 * added test for buffering across a mod_http2+mod_proxy_http2 connection
 * added TRACE2 logging to show buffering flag when writing task output
 * new option 'H2OutputBuffering on/off' which controls the buffering of stream output.
   The default is on, which is the behaviour of older mod-h2 versions. When off, all
   bytes are made available immediately to the main connection for sending them
   out to the client. This fixes interop issues with certain flavours of gRPC, see
   als #207.
 * Eliminated some Python deprecation warnings in test code.
 
v1.15.16
--------------------------------------------------------------------------------
 * Fixed reporting of transferred bytes for mod_logio for modifiers %O (and %S) to
   report the number of transferred header and body lengths. This is still only
   an approximation of the bytes on the connection. The data is subject to header
   compression and h2 framing afterwards. Grain of salt. Fixes #203.
 
v1.15.14
--------------------------------------------------------------------------------
 * Removing support for abandoned draft of http-wg regarding cache-digests.

v1.15.13
--------------------------------------------------------------------------------